--- a/_includes/_partial/after_footer.html
+++ b/_includes/_partial/after_footer.html
@@ -261,7 +261,10 @@ $(document).ready(function(){
       if ($(this).parent().hasClass('fancybox')) return;
       if ($(this).hasClass('emoji')) return;
       var alt = this.alt;
-      if (alt) $(this).after('<span class="caption">' + alt + '</span>');
+	  
+	  <!-- modified by ivan1001 20190724 -->
+      <!-- if (alt) $(this).after('<span class="caption">' + alt + '</span>'); -->
+	  if (alt) $(this).after('<br />');
       $(this).wrap('<a href="' + this.src + '" title="' + alt + '" class="fancybox"></a>');
     });
     $(this).find('.fancybox').each(function(){
