--- a/_includes/index.html
+++ b/_includes/index.html
@@ -9,7 +9,7 @@
   <nav id="page-nav" class="clearfix{% if site.index.expand != true  %} unexpand{% endif %}">
   <nav id="page-nav" class="clearfix">
     {% if paginator.previous_page %}
-    <a class="extend prev" rel="prev" href="{{ paginator.previous_page_path }}"><span></span>Prev</a>
+    <a class="extend prev" rel="prev" href="/records{{ paginator.previous_page_path }}"><span></span>Prev</a>
     {% endif %}
     {% if paginator.page == 1 %}
     <span class="page-number current">1</span>
@@ -20,11 +20,11 @@
     {%if i == paginator.page %}
     <span class="page-number current">{{ i }}</span>
     {% else %}
-    <a class="page-number" href="/page{{ i }}">{{ i }}</a>
+    <a class="page-number" href="/records/page{{ i }}">{{ i }}</a>
     {% endif %}
     {% endfor %}
      {% if paginator.next_page %}
-    <a class="extend next" rel="next" href="{{ paginator.next_page_path }}">Next<span></span></a>
+    <a class="extend next" rel="next" href="/records{{ paginator.next_page_path }}">Next<span></span></a>
     {% endif %}
   </nav>
   </nav>
